# axumyourman

./: Cargo.toml  bun.lockb  package-lock.json  package.json  tailwind.config.js  test.html
src/: main.rs
static/: index.html  output.css
static/js/: main.js
templates/: base.html  hello.html  home.html  welcome.html
templates/components/: nav.html
tests/: quick_dev.rs
