[package]
name = "AxumYourMan"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tera = "1.20.0"
tokio = { version = "1", features = ["full"] }
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
